[package]
name = "usv-to-csv"
version = "1.3.2"
edition = "2021"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
description = "USV to CSV: Convert Unicode Separated Values (USV) to Comma Separated Values (CSV) for data markup, including for spreadsheets, databases, text files, and more."
readme = "README.md"
repository = "https://github.com/sixarm/usv-to-csv-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0 OR GPL-3.0"
keywords = ["usv", "csv", "data", "import", "export"]
categories = ["command-line-utilities", "encoding", "data-structures", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# csv: Comma Separated Values
csv = "1"

# usv: Unicode Separated Values
usv = "0.14.0"

# clap: Command Line Argument Parser
clap = { version = "4.5.2", features = ["cargo"] }

# log: A Rust library providing a lightweight logging facade
log = "0.4.21"

# env_logger: A logger that can be configured via environment variables
env_logger = "0.11.3"

[dev-dependencies]
criterion = ">= 0.5"
rand = ">= 0.8"
once_cell = "1.19.0"

[[bench]]
name = "example"
harness = false
